tree-sitter-topos/test/corpus/requirements_concepts.txt
==================
Requirements
==================

# Requirements

## REQ-1: Task Creation
As a user...
when: user submits form
the system shall: create task

acceptance:
  given: user is logged in
  when: user submits
  then: task created

---

(source_file
  (section
    (header)
    (prose)
    (requirement
      (identifier)
      (ears_clause
        (text_line)
        (text_line))
      (acceptance
        (acc_clause (text_line))
        (acc_clause (text_line))
        (acc_clause (text_line))))))

==================
Concepts
==================

# Concepts

Concept Task:
  field id (`Identifier`): unique
  field status (`Status`): default: `todo`

---

(source_file
  (section
    (header)
    (concept
      (identifier)
      (field
        (identifier)
        (type_expr (reference (identifier)))
        (constraint))
      (field
        (identifier)
        (type_expr (reference (identifier)))
        (constraint
          (expression))))))
